--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Build a workshop of webpack",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --config mywebpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/saadaouad/workshop_webpack/issues"
   },
-  "homepage": "https://github.com/saadaouad/workshop_webpack#readme"
+  "homepage": "https://github.com/saadaouad/workshop_webpack#readme",
+  "devDependencies": {
+    "webpack": "^2.6.1"
+  }
 }
