--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
+    "path": "^0.12.7",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
