--- a/package.json
+++ b/package.json
@@ -4,19 +4,8 @@
   "description": "Build a workshop of webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config mywebpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --optimize-minimize"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/saadaouad/workshop_webpack.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/saadaouad/workshop_webpack/issues"
-  },
-  "homepage": "https://github.com/saadaouad/workshop_webpack#readme",
   "devDependencies": {
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
