--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,7 @@ services:
     build: .
     ports:
       - 3000:3000
+    volumes:
+      - .:/var/www
+      - /var/www/node_modules
+      - /var/www/dist
