--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '2.1'
 
 services:
   workshop_webpack:
-    image: workshop_webpack
     build: .
     ports:
-      - 3000:3000
+      - 9000:9000
     volumes:
       - .:/var/www
       - /var/www/node_modules
       - /var/www/dist
+    command: npm start
