--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --optimize-minimize",
-    "start": "webpack-dev-server"
+    "start": "node_modules/.bin/webpack-dev-server --host 0.0.0.0"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
