--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --optimize-minimize",
-    "start": "node_modules/.bin/webpack-dev-server --host 0.0.0.0"
+    "dev": "webpack-dev-server --config ./webpack.config.js",
+    "start": "npm run dev"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -15,7 +17,7 @@
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
     "path": "^0.12.7",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
