--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "start": "npm run dev"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.1.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
