--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
    build:
      working_directory: /var/www
      docker:
-       - image: circleci/node:6-alpine
+       - image: node:6-alpine
      steps:
        - checkout
        - run: echo "hello world"
